build: winget branch
Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -214,6 +214,7 @@ winget:
     repository:
       owner: goreleaser
       name: winget-pkgs
+      branch: "goreleaser-{{.Version}}"
       pull_request:
         enabled: true
         draft: true
