update contributing docs

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -31,14 +31,9 @@ tasks:
 
   test:
     desc: Run tests
-    env:
-      LC_ALL: C
     vars:
-      TEST_OPTIONS: '{{default "" .TEST_OPTIONS}}'
-      SOURCE_FILES: '{{default "./..." .SOURCE_FILES}}'
-      TEST_PATTERN: '{{default "." .TEST_PATTERN}}'
     cmds:
-      - go test {{.TEST_OPTIONS}} -failfast -race -coverpkg=./... -covermode=atomic -coverprofile=coverage.txt {{.SOURCE_FILES}} -run {{.TEST_PATTERN}} -timeout=5m
+      - go run ./ci
 
   cover:
     desc: Open the cover tool
