feat: metadata mod_timestamp (#4188)
closes #4167

---------

Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -120,6 +120,7 @@ nav:
           - customization/ko.md
       - customization/sbom.md
       - customization/reportsizes.md
+      - customization/metadata.md
       - Signing:
           - Checksums and artifacts: customization/sign.md
           - Docker Images and Manifests: customization/docker_sign.md
