--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -140,11 +140,11 @@ docker_manifests:
     image_templates:
       - "ghcr.io/goreleaser/goreleaser:{{ .Tag }}-amd64"
       - "ghcr.io/goreleaser/goreleaser:{{ .Tag }}-arm64"
-  - name_template: "goreleaser/goreleaser:latest"
+  - name_template: "{{ if not .IsNightly }}goreleaser/goreleaser:latest{{ end }}"
     image_templates:
       - "goreleaser/goreleaser:{{ .Tag }}-amd64"
       - "goreleaser/goreleaser:{{ .Tag }}-arm64"
-  - name_template: "ghcr.io/goreleaser/goreleaser:latest"
+  - name_template: "{{ if not .IsNightly }}ghcr.io/goreleaser/goreleaser:latest{{ end }}"
     image_templates:
       - "ghcr.io/goreleaser/goreleaser:{{ .Tag }}-amd64"
       - "ghcr.io/goreleaser/goreleaser:{{ .Tag }}-arm64"
