--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -90,8 +90,8 @@ changelog:
 
 dockers:
   - image_templates:
-      - "goreleaser/goreleaser:{{ .Tag }}-amd64"
-      - "ghcr.io/goreleaser/goreleaser:{{ .Tag }}-amd64"
+      - "goreleaser/goreleaser:v{{ .Version }}-amd64"
+      - "ghcr.io/goreleaser/goreleaser:v{{ .Version }}-amd64"
     dockerfile: Dockerfile
     use: buildx
     build_flag_templates:
@@ -110,8 +110,8 @@ dockers:
     extra_files:
       - scripts/entrypoint.sh
   - image_templates:
-      - "goreleaser/goreleaser:{{ .Tag }}-arm64"
-      - "ghcr.io/goreleaser/goreleaser:{{ .Tag }}-arm64"
+      - "goreleaser/goreleaser:v{{ .Version }}-arm64"
+      - "ghcr.io/goreleaser/goreleaser:v{{ .Version }}-arm64"
     dockerfile: Dockerfile
     use: buildx
     build_flag_templates:
@@ -132,22 +132,22 @@ dockers:
       - scripts/entrypoint.sh
 
 docker_manifests:
-  - name_template: "goreleaser/goreleaser:{{ .Tag }}"
+  - name_template: "goreleaser/goreleaser:v{{ .Version }}"
     image_templates:
-      - "goreleaser/goreleaser:{{ .Tag }}-amd64"
-      - "goreleaser/goreleaser:{{ .Tag }}-arm64"
-  - name_template: "ghcr.io/goreleaser/goreleaser:{{ .Tag }}"
+      - "goreleaser/goreleaser:v{{ .Version }}-amd64"
+      - "goreleaser/goreleaser:v{{ .Version }}-arm64"
+  - name_template: "ghcr.io/goreleaser/goreleaser:v{{ .Version }}"
     image_templates:
-      - "ghcr.io/goreleaser/goreleaser:{{ .Tag }}-amd64"
-      - "ghcr.io/goreleaser/goreleaser:{{ .Tag }}-arm64"
-  - name_template: "goreleaser/goreleaser:latest"
+      - "ghcr.io/goreleaser/goreleaser:v{{ .Version }}-amd64"
+      - "ghcr.io/goreleaser/goreleaser:v{{ .Version }}-arm64"
+  - name_template: "{{ if not .IsNightly }}goreleaser/goreleaser:latest{{ end }}"
     image_templates:
-      - "goreleaser/goreleaser:{{ .Tag }}-amd64"
-      - "goreleaser/goreleaser:{{ .Tag }}-arm64"
-  - name_template: "ghcr.io/goreleaser/goreleaser:latest"
+      - "goreleaser/goreleaser:v{{ .Version }}-amd64"
+      - "goreleaser/goreleaser:v{{ .Version }}-arm64"
+  - name_template: "{{ if not .IsNightly }}ghcr.io/goreleaser/goreleaser:latest{{ end }}"
     image_templates:
-      - "ghcr.io/goreleaser/goreleaser:{{ .Tag }}-amd64"
-      - "ghcr.io/goreleaser/goreleaser:{{ .Tag }}-arm64"
+      - "ghcr.io/goreleaser/goreleaser:v{{ .Version }}-amd64"
+      - "ghcr.io/goreleaser/goreleaser:v{{ .Version }}-arm64"
 
 archives:
   - name_template: >-
