--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -317,6 +317,7 @@ snapcrafts:
     grade: stable
     confinement: classic
     publish: true
+    disable: "{{ if .IsNightly }}true{{ end }}"
 
 sboms:
   - artifacts: archive
