build: improve archive name_template

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -151,12 +151,12 @@ docker_manifests:
 
 archives:
   - name_template: >-
-      {{ .ProjectName }}_
+      {{- .ProjectName }}_
       {{- title .Os }}_
       {{- if eq .Arch "amd64" }}x86_64
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
-      {{- if .Arm }}v{{ .Arm }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end -}}
     format_overrides:
       - goos: windows
         format: zip
