feat: publishers.disable
Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -350,6 +350,7 @@ publishers:
     env:
       - "FURY_TOKEN={{ .Env.FURY_TOKEN }}"
     cmd: ./scripts/fury-upload.sh {{ .ArtifactName }}
+    disable: "{{ if .IsNightly }}true{{ end }}"
 
 milestones:
   - close: true
