docs: welcome, rss

--- a/www/docker/Dockerfile
+++ b/www/docker/Dockerfile
@@ -1,2 +1,2 @@
 FROM squidfunk/mkdocs-material
-RUN pip install mkdocs-include-markdown-plugin
+RUN pip install mkdocs-include-markdown-plugin mkdocs-rss-plugin
