--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -56,7 +56,8 @@ plugins:
   - include-markdown
   - tags
   # - meta
-  - blog
+  - blog:
+      post_url_format: "{slug}"
   - rss:
       match_path: blog/posts/.*
       date_from_meta:
