--- a/www/htmltest.yml
+++ b/www/htmltest.yml
@@ -1,25 +1,27 @@
 IgnoreURLs:
-- www.google-analytics.com
-- fonts.gstatic.com
-- opencollective.com
-- https://gitlab.com/-/profile/personal_access_tokens
-- https://twitter.com/goreleaser
-- support.discord.com
-- microsoft.com
-- https://github.com/goreleaser/goreleaser/edit/
-- https://discord.com/
-- https://gofi.sh
-- https://docs.mattermost.com
-- https://github.com/goreleaser/goreleaser/pkgs
-- https://iron.security
-- https://marketplace.visualstudio.com
-- linkedin.com
-- repology.org
-- reddit.com
-- docs.github.com
-- help.github.com
+  - www.google-analytics.com
+  - fonts.gstatic.com
+  - opencollective.com
+  - https://gitlab.com/-/profile/personal_access_tokens
+  - https://twitter.com/goreleaser
+  - support.discord.com
+  - microsoft.com
+  - https://github.com/goreleaser/goreleaser/edit/
+  - https://discord.com/
+  - https://gofi.sh
+  - https://docs.mattermost.com
+  - https://github.com/goreleaser/goreleaser/pkgs
+  - https://iron.security
+  - https://marketplace.visualstudio.com
+  - linkedin.com
+  - repology.org
+  - reddit.com
+  - getrevue.co
+  - docs.github.com
+  - help.github.com
+  - twitter.com
 IgnoreDirs:
-- overrides
+  - overrides
 IgnoreDirectoryMissingTrailingSlash: true
 IgnoreAltMissing: true
 ExternalTimeout: 60
